--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "wxlmd/mdtask",
     "type": "library",
     "require": {
-        "topthink/think-queue": "^3.0"
+        "topthink/think-queue": "^3.0",
+        "topthink/think-migration": "^3.0"
     },
     "autoload": {
         "psr-4": {
